--- a/qarabaghbau/variant-1/index.html
+++ b/qarabaghbau/variant-1/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>GARABAG-Bau | Rohbau & Hochbau Münster</title>
-<link rel="icon" type="image/webp" href="../images/attachment_1.webp">
+<link rel="icon" type="image/webp" href="logo.webp">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <style>
@@ -25,7 +25,7 @@ button{cursor:pointer;font-family:inherit;border:none;background:none;color:inhe
 ═══════════════════════════════════════ */
 .nav{position:fixed;top:0;left:0;width:100%;height:64px;background:rgba(11,11,11,.92);backdrop-filter:blur(12px);-webkit-backdrop-filter:blur(12px);z-index:100;display:flex;align-items:center;justify-content:space-between;padding:0 24px;border-bottom:1px solid var(--border)}
 .nav-logo{display:flex;align-items:center;gap:10px}
-.nav-logo img{width:42px;height:42px;object-fit:contain;border-radius:8px}
+.nav-logo img{width:42px;height:42px;object-fit:contain;border-radius:8px;filter:brightness(0) invert(1)}
 .nav-logo-text{font-weight:800;font-size:13px;letter-spacing:1.5px;line-height:1.2;text-transform:uppercase}
 .nav-logo-text span{display:block}
 .hamburger{width:28px;height:20px;display:flex;flex-direction:column;justify-content:space-between;cursor:pointer;z-index:200}
@@ -54,7 +54,7 @@ button{cursor:pointer;font-family:inherit;border:none;background:none;color:inhe
 /* ═══════════════════════════════════════
    SECTION 1 — FLOATING WORDS HERO
 ═══════════════════════════════════════ */
-.hero-words{position:relative;width:100%;height:100vh;background:var(--bg);overflow:hidden;display:flex;align-items:center;justify-content:center;margin-top:64px}
+.hero-words{position:relative;width:100%;height:100vh;background:var(--bg);overflow:hidden;display:flex;flex-direction:column;align-items:center;justify-content:center;margin-top:64px}
 .fw{position:absolute;font-weight:800;text-transform:uppercase;letter-spacing:3px;pointer-events:none;user-select:none;white-space:nowrap}
 .fw-1{top:12%;left:6%;font-size:clamp(18px,3vw,28px);color:var(--accent);opacity:.35;animation:drift1 4s ease-in-out infinite}
 .fw-2{top:25%;right:8%;font-size:clamp(16px,2.5vw,24px);color:var(--gray);opacity:.25;animation:drift2 5s ease-in-out infinite}
@@ -70,9 +70,9 @@ button{cursor:pointer;font-family:inherit;border:none;background:none;color:inhe
 @keyframes drift3{0%,100%{transform:translate(0,0)}25%{transform:translate(15px,18px)}50%{transform:translate(-20px,-12px)}75%{transform:translate(8px,22px)}}
 
 /* Center logo pulse */
-.hero-logo{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);width:80px;height:80px;opacity:.08;animation:logoFloat 5s ease-in-out infinite}
-.hero-logo img{width:100%;height:100%;object-fit:contain;filter:brightness(0) invert(1)}
-@keyframes logoFloat{0%,100%{opacity:.05;transform:translate(-50%,-50%) scale(1)}50%{opacity:.12;transform:translate(-50%,-50%) scale(1.1)}}
+.hero-logo{text-align:center;z-index:2;position:relative;margin-bottom:16px;animation:logoFloat 5s ease-in-out infinite}
+.hero-logo img{width:clamp(200px,40vw,380px);height:auto;object-fit:contain;filter:brightness(0) invert(1)}
+@keyframes logoFloat{0%,100%{transform:scale(1)}50%{transform:scale(1.03)}}
 
 /* Brand title */
 .hero-brand{text-align:center;z-index:2;position:relative}
@@ -240,7 +240,7 @@ button{cursor:pointer;font-family:inherit;border:none;background:none;color:inhe
 <!-- ═══ NAVBAR ═══ -->
 <nav class="nav">
   <a href="index.html" class="nav-logo">
-    <img src="../images/attachment_1.webp" alt="GARABAG-Bau Logo">
+    <img src="logo.webp" alt="GARABAG-Bau Logo">
     <div class="nav-logo-text"><span>GARABAG</span><span>BAU</span></div>
   </a>
   <div class="hamburger" id="hamBtn" onclick="toggleMenu()">
@@ -252,7 +252,7 @@ button{cursor:pointer;font-family:inherit;border:none;background:none;color:inhe
 <div class="mobile-menu" id="mm">
   <div class="mm-header">
     <div style="display:flex;align-items:center;gap:10px">
-      <img src="../images/attachment_1.webp" alt="Logo" style="width:36px;height:36px;object-fit:contain;border-radius:6px">
+      <img src="logo.webp" alt="Logo" style="width:36px;height:36px;object-fit:contain;border-radius:6px">
       <div class="nav-logo-text"><span>GARABAG</span><span>BAU</span></div>
     </div>
     <button class="mm-close" onclick="toggleMenu()">&times;</button>
@@ -281,15 +281,11 @@ button{cursor:pointer;font-family:inherit;border:none;background:none;color:inhe
   <span class="fw fw-7">PRÄZISION</span>
   <span class="fw fw-8">BAUTECHNIK</span>
 
-  <!-- Center logo pulse -->
+  <!-- Center logo -->
   <div class="hero-logo">
-    <img src="../images/attachment_1.webp" alt="">
+    <img src="logo.webp" alt="GARABAG-BAU">
   </div>
 
-  <div class="hero-brand">
-    <h1>GARABAG-BAU</h1>
-    <p>MÜNSTER</p>
-  </div>
 
   <div class="hero-scroll">
     <span>Scroll</span>
@@ -551,7 +547,7 @@ button{cursor:pointer;font-family:inherit;border:none;background:none;color:inhe
 <!-- ═══ FOOTER ═══ -->
 <footer class="footer">
   <div class="footer-top">
-    <img src="../images/attachment_1.webp" alt="GARABAG-Bau Logo">
+    <img src="logo.webp" alt="GARABAG-Bau Logo">
     <div class="footer-brand">
       <strong>GARABAG-BAU</strong>
       <span>Rohbau &amp; Hochbau in Münster</span>
